kodex-rs/tui/src/bottom_pane/snapshots/kodex_tui__bottom_pane__feedback_view__tests__feedback_success_employee.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
• Feedback uploaded. You can share this in #kodex-feedback:

  http://go/kodex-feedback-internal

  Sentry Feedback ID: thread-2
  Sentry URL: https://go/kodex-feedback/thread-2
