kodex-rs/tui/src/bottom_pane/snapshots/kodex_tui__bottom_pane__feedback_view__tests__feedback_upload_consent_lists_doctor_report.snap
---
source: tui/src/bottom_pane/feedback_view.rs
assertion_line: 728
expression: rendered
---
Upload logs?

The following files will be sent:
  • kodex-logs.log
  • client-logs.txt (if available)
  • kodex-doctor-report.json
  • kodex-apps-tools-cache.json (if available)
  • kodex-app-directory-cache.json (if available)
  • rollout.jsonl
  • auto-review-rollout.jsonl
