kodex-rs/tui/src/bottom_pane/snapshots/kodex_tui__bottom_pane__feedback_view__tests__feedback_upload_consent_lists_windows_sandbox_log_when_included.snap
---
source: tui/src/bottom_pane/feedback_view.rs
assertion_line: 746
expression: rendered
---
Upload logs?

The following files will be sent:
  • kodex-logs.log
  • client-logs.txt (if available)
  • kodex-doctor-report.json
  • kodex-apps-tools-cache.json (if available)
  • kodex-app-directory-cache.json (if available)
  • windows-sandbox.log
  • rollout.jsonl
  • auto-review-rollout.jsonl
